tests/fixtures/invalid/domain_on_bool.gcl
// domain_on_bool.gcl -- constraint on unsupported type
param flag: Bool(min: 0.0) = true;
